--- a/app/assets/styles/tools.scss
+++ b/app/assets/styles/tools.scss
@@ -128,7 +128,7 @@
 }
 
 .smenubar a {
-  color: white !important;
+  color: black !important;
   padding: 4px 8px !important;
 }
 
